# omni-academic-framework

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  QUALITY_IMPROVEMENT_PLAN.md  README.en.md  README.md  RELEASE_NOTES.md  SCHEMAS.md  USER_GUIDE.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  sample.md
handoff/: 2026-05-19-peer-review.md  finalization-v0.5.1-2026-05-19.md  peer-review-2026-05-19.md  peer-review-merged-2026-05-19.md  peer-review-v0.5.1-2026-05-19.md
lenses/: cs.yaml  economics.yaml  general.yaml  humanities.yaml  lens-template.md  medical.yaml  review_panel.yaml  theology.yaml
omni_academic/analyze/: glossary.py  lens_analyzer.py  peer_review.py
omni_academic/audit/: coverage.py  draft_gate.py  forensic.py  gate.py  lens_gate.py
omni_academic/config/: lens.py
omni_academic/draft/: scribe.py
omni_academic/llm/: provider.py
omni_academic/ontology/: extractor.py
omni_academic/recon/: engine.py  scraper.py
omni_academic/recon/clients/: __init__.py  arxiv.py  base.py  crossref.py  dblp.py  econbiz.py  kci.py  openalex.py  pubmed.py  scholar.py  semantic_scholar.py
omni_academic/store/: query_db.py  recon_cache.py  run_store.py
omni_academic/supervisor/: router.py  run_status.py  status.py
omni_academic/text/: grounding.py  paragraphs.py
skills/google-scholar-semantic/: SKILL.md
skills/google-scholar-semantic/references/: depth-definitions.md  gotchas.md  output-schema.md  rise-logic.md
skills/google-scholar-semantic/scripts/: config.example.json  config.schema.json  queries.json  scholar_runner.py
skills/omni-supervisor/: SKILL.md
skills/omni-translator/: SKILL.md
skills/omni-translator/references/: author-mode-roles.md  gotchas.md  payload-schema.md  status-terminology.md  translation-loop.md  yt_lecture_protocol.md
skills/omni-translator/templates/: pm_quality_report.md  (+1 more)
skills/ontology-extractor/: SKILL.md
skills/semantic-scholar/: SKILL.md
skills/theology-translator/: SKILL.md
src/analyze/: lens_analyzer.py
src/audit/: forensic.py  gate.py  lens_gate.py
src/config/: lens.py  tools.py
src/llm/: provider.py
src/ontology/: extractor.py
src/recon/: engine.py  scraper.py
src/store/: query_db.py  recon_cache.py  run_store.py
src/supervisor/: router.py  run_status.py  status.py
src/text/: paragraphs.py
tests/: conftest.py  test_aporia.py  test_audit_gate.py  test_coverage.py  test_dblp.py  test_draft.py  test_econbiz.py  test_failure_artifact.py  test_forensic.py  test_glossary.py  test_grounding.py  test_kci.py  test_lens_and_provider.py  test_lens_config.py  test_lens_gate.py  test_llm_analysis_ops.py  test_ontology_retry.py  test_paragraphs.py  test_peer_review.py  test_provider_boundary.py  test_provider_runtime.py  test_pubmed_openalex.py  test_query_db.py  test_recon_and_router.py  test_router_modes.py  test_run_store.py  test_schema_contracts.py  test_scholar_parser.py  test_scraper_cache_snowball.py  test_scraper_factory.py  test_status_utils.py  test_tools_config.py  test_usage_log.py
workflows/: omni-research.md  theology-research.md
(+14 files in other folders)
