[project]
name = "omni-academic-framework"
version = "0.5.0"
description = "Palantir-style Ontology-First Academic Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.4.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
semantic-scholar = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
scholar-browser = [
    "beautifulsoup4>=4.12.0",
]
llm = [
    "anthropic>=0.49.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
omni = "src.supervisor.router:main"

[tool.uv]
exclude-newer = "7 days"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
