[project]
name = "omni-academic-framework"
version = "0.6.0"
description = "Palantir-style Ontology-First Academic Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.4.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "arxiv>=2.1.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
semantic-scholar = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]
scholar-browser = [
    "beautifulsoup4>=4.12.0",
]
llm = [
    "anthropic>=0.49.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
omni = "src.supervisor.router:main"

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["skills"]  # legacy/optional scripts — 별도 정비 대상

[tool.ruff.lint]
# 보수적 시작: 실 버그 신호(구문오류·pyflakes·import 정렬)만 게이트.
# 스타일 전수 정리는 후속 작업으로 분리한다.
select = ["E9", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
